syntax = "proto3";
package gdelt_categorylist;

enum GDELTCategoryList {
    UNKNOWN = 0;
    AFFECT = 1;
    AGRICULTURE = 2;
    ALLIANCE = 3;
    APPOINTMENT = 4;
    ARMEDCONFLICT = 5;
    ARREST = 6;
    ASSASSINATION = 7;
    AUSTERITY = 8;
    AVIATION_INCIDENT = 9;
    BAN = 10;
    BLACK_MARKET = 11;
    BLOCKADE = 12;
    BORDER = 13;
    BULLYING = 14;
    CEASEFIRE = 15;
    CHARASMATIC_LEADERSHIP = 16;
    CHECKPOINT = 17;
    CLAIM_CREDIT = 18;
    CLOSURE = 19;
    CONFISCATION = 20;
    CONSTITUTIONAL = 21;
    CORRUPTION = 22;
    CRIME_CARTELS = 23;
    CRIME_COMMON_ROBBERY = 24;
    CRIME_ILLEGAL_DRUGS = 25;
    CURFEW = 26;
    CYBER_ATTACK = 27;
    DEATH_PENALTY = 28;
    DEFECTION = 29;
    DELAY = 30;
    DEMOCRACY = 31;
    DISABILITY = 32;
    DISCRIMINATION = 33;
    DISPLACED = 34;
    DRONE = 35;
    DRUG_TRADE = 36;
    ECON_BANKRUPTCY = 37;
    ECON_BOYCOTT = 38;
    ECON_COST_OF_LIVING = 39;
    ECON_CURRENCY_EXCHANGE_RATE = 40;
    ECON_CURRENCY_RESERVES = 41;
    ECON_CUTOUTLOOK = 42;
    ECON_DEBT = 43;
    ECON_DEREGULATION = 44;
    ECON_EARNINGSREPORT = 45;
    ECON_ENTREPRENEURSHIP = 46;
    ECON_FOREIGNINVEST = 47;
    ECON_FREETRADE = 48;
    ECON_HOUSING_PRICES = 49;
    ECON_INFORMAL_ECONOMY = 50;
    ECON_INTEREST_RATES = 51;
    ECON_IPO = 52;
    ECON_MONOPOLY = 53;
    ECON_MOU = 54;
    ECON_NATIONALIZE = 55;
    ECON_PRICECONTROL = 56;
    ECON_REMITTANCE = 57;
    ECON_STOCKMARKET = 58;
    ECON_SUBSIDIES = 59;
    ECON_TAXATION = 60;
    ECON_TRADE_DISPUTE = 61;
    ECON_UNIONS = 62;
    EDUCATION = 63;
    ELECTION = 64;
    ELECTION_FRAUD = 65;
    ENV_BIOFUEL = 66;
    ENV_CARBONCAPTURE = 67;
    ENV_CLIMATECHANGE = 68;
    ENV_COAL = 69;
    ENV_DEFORESTATION = 70;
    ENV_FISHERY = 71;
    ENV_FORESTRY = 72;
    ENV_GEOTHERMAL = 73;
    ENV_GREEN = 74;
    ENV_HYDRO = 75;
    ENV_METALS = 76;
    ENV_MINING = 77;
    ENV_NATURALGAS = 78;
    ENV_NUCLEARPOWER = 79;
    ENV_OIL = 80;
    ENV_OVERFISH = 81;
    ENV_POACHING = 82;
    ENV_SOLAR = 83;
    ENV_SPECIESENDANGERED = 84;
    ENV_SPECIESEXTINCT = 85;
    ENV_WATERWAYS = 86;
    ENV_WINDPOWER = 87;
    ETH_INDIGINOUS = 88;
    EVACUATION = 89;
    EXHUMATION = 90;
    EXILE = 91;
    EXTREMISM = 92;
    FIREARM_OWNERSHIP = 93;
    FOOD_SECURITY = 94;
    FOOD_STAPLE = 95;
    FREESPEECH = 96;
    FUELPRICES = 97;
    GEN_HOLIDAY = 98;
    GENDER_VIOLENCE = 99;
    GENERAL_GOVERNMENT = 100;
    GENERAL_HEALTH = 101;
    GENTRIFICATION = 102;
    GOV_DISSOLVEGOV = 103;
    GOV_DIVISIONOFPOWER = 104;
    GOV_INTERGOVERNMENTAL = 105;
    GOV_REFORM = 106;
    GOV_REPATRIATION = 107;
    GRIEVANCES = 108;
    HARASSMENT = 109;
    HATE_SPEECH = 110;
    HEALTH_PANDEMIC = 111;
    HEALTH_SEXTRANSDISEASE = 112;
    HEALTH_VACCINATION = 113;
    HUMAN_TRAFFICKING = 114;
    IDEOLOGY = 115;
    IMMIGRATION = 116;
    IMPEACHMENT = 117;
    INFO_HOAX = 118;
    INFO_RUMOR = 119;
    INFRASTRUCTURE_BAD_ROADS = 120;
    INSURGENCY = 121;
    INTERNET_BLACKOUT = 122;
    INTERNET_CENSORSHIP = 123;
    JIHAD = 124;
    KIDNAP = 125;
    KILL = 126;
    LANDMINE = 127;
    LEADER = 128;
    LEGALIZE = 129;
    LEGISLATION = 130;
    LGBT = 131;
    LITERACY = 132;
    LOCUSTS = 133;
    MANMADE_DISASTER = 134;
    MANMADE_DISASTER_IMPLIED = 135;
    MARITIME = 136;
    MARITIME_INCIDENT = 137;
    MARITIME_INCIDENT_IMPLIED = 138;
    MARITIME_INCIDENT_SELF_IDENTIFIED = 139;
    MARITIME_PIRACY = 140;
    MEDIA_CENSORSHIP = 141;
    MEDIA_MSM = 142;
    MEDIA_SOCIAL = 143;
    MEDICAL = 144;
    MEDICAL_SECURITY = 145;
    MIL_SELF_IDENTIFIED_ARMS_DEAL = 146;
    MIL_WEAPONS_PROLIFERATION = 147;
    MILITARY = 148;
    MILITARY_COOPERATION = 149;
    MOVEMENT_ENVIRONMENTAL = 150;
    MOVEMENT_GENERAL = 151;
    MOVEMENT_OTHER = 152;
    MOVEMENT_SOCIAL = 153;
    MOVEMENT_WOMENS = 154;
    NATURAL_DISASTER = 155;
    NEGOTIATIONS = 156;
    NEW_CONSTRUCTION = 157;
    ORGANIZED_CRIME = 158;
    PEACEKEEPING = 159;
    PERSECUTION = 160;
    PHONE_OUTAGE = 161;
    PIPELINE_INCIDENT = 162;
    PIRACY = 163;
    POL_HOSTVISIT = 164;
    POLITICAL_PRISONER = 165;
    POLITICAL_TURMOIL = 166;
    POPULATION_DENSITY = 167;
    POVERTY = 168;
    POWER_OUTAGE = 169;
    PRIVATIZATION = 170;
    PROPAGANDA = 171;
    PROPERTY_RIGHTS = 172;
    PROTEST = 173;
    PUBLIC_TRANSPORT = 174;
    RAIL_INCIDENT = 175;
    RAPE = 176;
    RATIFY = 177;
    REBELLION = 178;
    REBELS = 179;
    RECRUITMENT = 180;
    REFUGEES = 181;
    REL_ANTISEMITISM = 182;
    RELATIONS = 183;
    RELEASE_HOSTAGE = 184;
    RELEASE_PRISON = 185;
    RELIGION = 186;
    RESIGNATION = 187;
    RETALIATE = 188;
    RETIREMENT = 189;
    RETIREMENTS = 190;
    ROAD_INCIDENT = 191;
    RURAL = 192;
    SANCTIONS = 193;
    SANITATION = 194;
    SCANDAL = 195;
    SCIENCE = 196;
    SECURITY_SERVICES = 197;
    SEIGE = 198;
    SEIZE = 199;
    SELF_IDENTIFIED_ATROCITY = 200;
    SELF_IDENTIFIED_ENVIRON_DISASTER = 201;
    SELF_IDENTIFIED_HUMAN_RIGHTS = 202;
    SELF_IDENTIFIED_HUMANITARIAN_CRISIS = 203;
    SEPARATISTS = 204;
    SHORTAGE = 205;
    SICKENED = 206;
    SLFID_CAPACITY_BUILDING = 207;
    SLFID_CIVIL_LIBERTIES = 208;
    SLFID_DICTATORSHIP = 209;
    SLFID_ECONOMIC_DEVELOPMENT = 210;
    SLFID_ECONOMIC_POWER = 211;
    SLFID_MILITARY_BUILDUP = 212;
    SLFID_MILITARY_READINESS = 213;
    SLFID_MILITARY_SPENDING = 214;
    SLFID_MINERAL_RESOURCES = 215;
    SLFID_NATURAL_RESOURCES = 216;
    SLFID_PEACE_BUILDING = 217;
    SLFID_POLITICAL_BOUNDARIES = 218;
    SLFID_RULE_OF_LAW = 219;
    SLUMS = 220;
    SMUGGLING = 221;
    SOC_DIPLOMCOOP = 222;
    SOC_ECONCOOP = 223;
    SOC_EXPRESSREGRET = 224;
    SOC_EXPRESSSUPPORT = 225;
    SOC_FORCEDRELOCATION = 226;
    SOC_GENERALCRIME = 227;
    SOC_INTELSHARING = 228;
    SOC_JUDICIALCOOP = 229;
    SOC_MASSMIGRATION = 230;
    SOC_PARDON = 231;
    SOC_SUICIDE = 232;
    SOC_SUSPICIOUSACTIVITIES = 233;
    SOC_SUSPICIOUSPEOPLE = 234;
    SOC_TRAFFICACCIDENT = 235;
    SOVEREIGNTY = 236;
    STATE_OF_EMERGENCY = 237;
    STRIKE = 238;
    SUICIDE_ATTACK = 239;
    SURVEILLANCE = 240;
    TAKE_OFFICE = 241;
    TAX_CARTELS = 242;
    TAX_DISEASE = 243;
    TAX_ETHNICITY = 244;
    TAX_FNCACT = 245;
    TAX_FOODSTAPLES = 246;
    TAX_MILITARY_TITLE = 247;
    TAX_POLITICAL_PARTY = 248;
    TAX_RELIGION = 249;
    TAX_SPECIAL_ISSUES = 250;
    TAX_SPECIALDEATH = 251;
    TAX_TERROR_GROUP = 252;
    TAX_WEAPONS = 253;
    TERROR = 254;
    TORTURE = 255;
    TOURISM = 256;
    TRAFFIC = 257;
    TRANSPARENCY = 258;
    TREASON = 259;
    TRIAL = 260;
    UNEMPLOYMENT = 261;
    UNGOVERNED = 262;
    UNREST_CHECKPOINT = 263;
    UNREST_CLOSINGBORDER = 264;
    UNREST_HUNGERSTRIKE = 265;
    UNREST_MOLOTOVCOCKTAIL = 266;
    UNREST_POLICEBRUTALITY = 267;
    UNREST_STONETHROWING = 268;
    UNREST_STONING = 269;
    UNSAFE_WORK_ENVIRONMENT = 270;
    URBAN = 271;
    URBAN_SPRAWL = 272;
    VANDALIZE = 273;
    VETO = 274;
    VIOLENT_UNREST = 275;
    WATER_SECURITY = 276;
    WHISTLEBLOWER = 277;
    WMD = 278;
    WOUND = 279;
}
