syntax = "proto3";
package gdelt_date;

import "google/protobuf/timestamp.proto";

message GDELTDate {
    google.protobuf.Timestamp date = 1;

    optional uint64 offset = 2;
}
