syntax = "proto3";
package gdelt_quotation;

message GDELTQuotation {
    // The offset of the quotation in the text.
    optional uint64 offset = 1;

    // The length of the quotation.
    optional uint64 length = 2;

    // The verb associated with the quotation.
    optional string verb = 3;

    // The actual quoted text.
    optional string quote = 4;
}
